# chaterminal

./: .gitignore  CMakeLists.txt  README.md
chaterminal-client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
chaterminal-client/callback/: auth_cb.c  chat_cb.c  event_cb.c  user_cb.c
chaterminal-client/include/: auth_cb.h  chat_cb.h  defines.h  event_cb.h  get_serv_msg.h  process_response.h  server_connect_service.h  user_cb.h
chaterminal-client/service/: server_connect_service.c
chaterminal-client/util/: get_serv_msg.c  process_response.c
chaterminal-server/: CMakeLists.txt  Makefile  cmake_install.cmake  db-setup.sh  err_code.txt  main.c  request_form.txt
chaterminal-server/callback/: auth.c  connection.c  req_dispactcher.c
chaterminal-server/dao/: chat_dao.c  db_connect.c  user_dao.c
chaterminal-server/include/: auth.h  auth_array.h  auth_service.h  chat_dao.h  client_msg.h  config.h  connection.h  db_connect.h  init_service.h  modify_service.h  req_dispatcher.h  request_service.h  send_service.h  sendmsg_service.h  settings.h  stat_response_service.h  user_dao.h
chaterminal-server/service/: auth_service.c  init_service.c  modify_service.c  request_service.c  sendmsg_service.c  stat_response_service.c
chaterminal-server/utils/: auth_array.c  client_msg.c
mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake
mybuild/chaterminal-client/: Makefile  chaterminal_client
mybuild/chaterminal-server/: Makefile  chaterminal_server
